--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "laravel-mix-tailwind": "^0.1.0",
         "react": "^16.13.1",
         "react-dom": "^16.13.1",
+        "react-repeatable": "^2.0.1",
         "resolve-url-loader": "^3.1.1",
         "sass": "^1.26.10",
         "sass-loader": "^9.0.3",
