--- a/package.json
+++ b/package.json
@@ -2,24 +2,25 @@
     "private": true,
     "scripts": {
         "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "development": "mix",
+        "hot": "mix watch --hot",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "mix --production",
+        "watch": "mix watch",
+        "watch-poll": "mix watch -- --watch-options-poll=1000"
     },
     "devDependencies": {
-        "@babel/preset-react": "^7.10.4",
-        "awesome-phonenumber": "^2.36.0",
-        "cross-env": "^7.0.2",
-        "laravel-mix": "^5.0.4",
-        "laravel-mix-tailwind": "^0.1.0",
-        "react": "^16.13.1",
-        "react-dom": "^16.13.1",
+        "@babel/preset-react": "^7.23.3",
+        "awesome-phonenumber": "^2.73.0",
+        "cross-env": "^7.0.3",
+        "laravel-mix": "^6.0.49",
+        "laravel-mix-tailwind": "^0.1.2",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "react-repeatable": "^2.0.1",
-        "resolve-url-loader": "^3.1.1",
-        "sass": "^1.26.10",
-        "sass-loader": "^9.0.3",
-        "tailwindcss": "^1.6.2"
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.69.7",
+        "sass-loader": "^13.3.3",
+        "tailwindcss": "^3.4.1"
     }
 }
